--- a/rimice/Cargo.toml
+++ b/rimice/Cargo.toml
@@ -5,7 +5,5 @@ edition = "2024"
 
 [dependencies]
 argh = "0.1.13"
-gio = "0.21"
-glib = "0.21"
-gtk4 = "0.10"
+gtk = { version = "0.10", package = "gtk4" }
 rimicore = { path = "../rimicore" }
