--- a/rimicore/Cargo.toml
+++ b/rimicore/Cargo.toml
@@ -4,6 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-gio = "0.21"
-glib = "0.21"
-gtk4 = "0.10"
+gtk = { version = "0.10", package = "gtk4" }
