--- a/rimice-core/meson.build
+++ b/rimice-core/meson.build
@@ -4,6 +4,7 @@ dependencies = [
     dependency('glib-2.0'),
     dependency('gobject-2.0'),
     dependency('gtk4'),
+    dependency('gtk4-layer-shell-0'),
 ]
 
 subdir('src')
