--- a/rimice-core/src/meson.build
+++ b/rimice-core/src/meson.build
@@ -1,5 +1,7 @@
 sources = files(
     'Application.vala',
+    'widgets/Window.vala',
+    'widgets/PinWindow.vala',
 )
 
 rimice_lib = shared_library(
