Refine window subclasses

--- a/flurr-core/src/meson.build
+++ b/flurr-core/src/meson.build
@@ -1,7 +1,7 @@
 sources = files(
     'Application.vala',
-    'widgets/Window.vala',
-    'widgets/PinWindow.vala',
+    'widgets/Shell.vala',
+    'widgets/PinShell.vala',
 )
 
 flurr_lib = shared_library(
