--- a/flurr-core/meson.build
+++ b/flurr-core/meson.build
@@ -7,5 +7,11 @@ dependencies = [
     dependency('gtk4-layer-shell-0'),
 ]
 
+resources = import('gnome').compile_resources(
+    'flurr_resources',
+    'data/flurr.gresource.xml',
+    source_dir: 'data'
+)
+
 subdir('src')
 subdir('tests')
