--- a/flurr/meson.build
+++ b/flurr/meson.build
@@ -3,6 +3,7 @@ project('Flurr', ['vala', 'c'], version: '0.1.0', license: 'GPL3')
 dependencies = [
     dependency('glib-2.0'),
     dependency('gobject-2.0'),
+    dependency('gio-2.0'),
     dependency('gtk4'),
     dependency('gtk4-layer-shell-0'),
 ]
