Separate DBus interfaces and services

--- a/flurr/src/meson.build
+++ b/flurr/src/meson.build
@@ -1,7 +1,12 @@
 sources = files(
     'Application.vala',
+    'widgets/property_types.vala',
     'widgets/Shell.vala',
     'widgets/PinShell.vala',
+    'dbus/interfaces.vala',
+    'dbus/ApplicationService.vala',
+    'dbus/ShellService.vala',
+    'dbus/PinShellService.vala',
 )
 
 sources += resources
