--- a/flurrctl/Cargo.toml
+++ b/flurrctl/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-argh = "0.1.13"
+clap = { version = "4.5", features = ["derive"] }
 dbus = "0.9.9"
