Move DBus files and functions

--- a/flurr/src/meson.build
+++ b/flurr/src/meson.build
@@ -3,15 +3,10 @@ sources = files(
     'widgets/property_types.vala',
     'widgets/Shell.vala',
     'widgets/PinShell.vala',
-    'dbus/utils.vala',
-    'dbus/interfaces.vala',
-    'dbus/ApplicationService.vala',
-    'dbus/WindowService.vala',
-    'dbus/ShellService.vala',
-    'dbus/PinShellService.vala',
 )
-
 sources += resources
+
+subdir('dbus')
 
 flurr_lib = shared_library(
     'flurr',
