--- a/flurrctl/Cargo.toml
+++ b/flurrctl/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+flurr-dbus = { path = "../flurr-dbus" }
 clap = { version = "4.5", features = ["derive"] }
 dbus = "0.9.9"
