--- a/flurr/meson.build
+++ b/flurr/meson.build
@@ -1,4 +1,4 @@
-project('Flurr', ['vala', 'c'], version: '0.1.0', license: 'GPL3')
+project('Flurr', ['vala', 'c'], version: '0.1.0', license: 'MPL-2.0')
 
 dependencies = [
     dependency('glib-2.0'),
