--- a/crates/flurr-enums/Cargo.toml
+++ b/crates/flurr-enums/Cargo.toml
@@ -6,5 +6,10 @@ description = "Rust bindings for Flurr enums"
 repository = "https://github.com/mimvoid/flurr"
 edition = "2024"
 
+[features]
+default = ["strum"]
+strum = ["dep:strum"]
+
 [dependencies]
 bitflags = "2.9.4"
+strum = { version = "0.27.2", features = ["derive"], optional = true }
