--- a/crates/flurrctl/Cargo.toml
+++ b/crates/flurrctl/Cargo.toml
@@ -15,3 +15,4 @@ clap = { version = "4.5", features = ["derive"] }
 dbus = "0.9.9"
 log = "0.4.28"
 env_logger = { version = "0.11.8", features = ["auto-color"], default-features = false }
+thiserror = "2.0.17"
