Add release mode binary size optimizations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,7 @@ resolver = "3"
 members = [
   "crates/*"
 ]
+
+[profile.release]
+opt-level = "s" # Optimize for binary size, as DBus messages are the more likely bottleneck
+lto = true # Link time optimization
