--- a/core/meson.build
+++ b/core/meson.build
@@ -1,12 +1,8 @@
 project('Flurr', ['vala', 'c'], version: '0.1.0', license: 'MPL-2.0')
 
-dependencies = [
-    dependency('glib-2.0'),
-    dependency('gobject-2.0'),
-    dependency('gio-2.0'),
-    dependency('gtk4'),
-    dependency('gtk4-layer-shell-0'),
-]
+glib = dependency('glib-2.0')
+gobject = dependency('gobject-2.0')
+gio = dependency('gio-2.0')
 
 subdir('src')
 
