--- a/core/src/meson.build
+++ b/core/src/meson.build
@@ -1,17 +1,2 @@
-sources = files(
-    'Application.vala',
-    'widgets/property_types.vala',
-    'widgets/Shell.vala',
-    'widgets/PinShell.vala',
-)
-
-subdir('dbus')
-
-flurr_lib = shared_library(
-    'flurr',
-    sources,
-    dependencies: dependencies,
-    install: true,
-    install_dir: [true, true, true]
-)
-flurr_dep = declare_dependency(include_directories: include_directories('.'), link_with: flurr_lib)
+subdir('flurrdbus')
+subdir('flurr')
