Add GObject Introspection for Vala

--- a/core/src/flurr/meson.build
+++ b/core/src/flurr/meson.build
@@ -20,13 +20,42 @@ sources = files(
     'dbus/services/PinShellService.vala',
 )
 
-flurr_lib = shared_library(
-    'flurr',
-    sources,
-    dependencies: dependencies,
-    install: true,
-    install_dir: [true, true, true]
-)
+if get_option('introspection')
+    gir = 'Flurr-' + api_version + '.gir'
+    typelib = 'Flurr-' + api_version + '.typelib'
+
+    flurr_lib = shared_library(
+        'flurr',
+        sources,
+        dependencies: dependencies,
+        vala_gir: gir,
+        install: true,
+        install_dir: [true, true, true, true]
+    )
+
+    custom_target(
+        typelib,
+        command: [
+            g_ir_compiler,
+            '--includedir', flurrdbus_dir,
+            '--output', '@OUTPUT@',
+            meson.current_build_dir() / gir
+        ],
+        output: typelib,
+        depends: flurr_lib,
+        install: true,
+        install_dir: get_option('libdir') / 'girepository-1.0'
+    )
+else
+    flurr_lib = shared_library(
+        'flurr',
+        sources,
+        dependencies: dependencies,
+        install: true,
+        install_dir: [true, true, true]
+    )
+endif
+
 flurr_dep = declare_dependency(
     include_directories: include_directories('.'),
     link_with: flurr_lib
