Format Meson build files

--- a/core/meson_options.txt
+++ b/core/meson_options.txt
@@ -1,2 +1,13 @@
-option('introspection', type: 'boolean', value: true, description: 'Create GObject Introspection file definitions')
-option('examples', type: 'boolean', value: true, description: 'Build example applications')
+option(
+  'introspection',
+  type: 'boolean',
+  value: true,
+  description: 'Create GObject Introspection file definitions'
+)
+
+option(
+  'examples',
+  type: 'boolean',
+  value: true,
+  description: 'Build example applications'
+)
