Add CSS loading helper functions

--- a/core/src/flurr/meson.build
+++ b/core/src/flurr/meson.build
@@ -9,6 +9,7 @@ dependencies = [
 
 sources = files(
   'Application.vala',
+  'css.vala',
   'widgets/property_types.vala',
   'widgets/Shell.vala',
   'widgets/PinShell.vala',
