--- a/core/meson_options.txt
+++ b/core/meson_options.txt
@@ -2,12 +2,12 @@ option(
   'introspection',
   type: 'boolean',
   value: true,
-  description: 'Create GObject Introspection file definitions'
+  description: 'Create GObject Introspection file definitions',
 )
 
 option(
   'examples',
   type: 'boolean',
   value: true,
-  description: 'Build example applications'
+  description: 'Build example applications',
 )
