--- a/core/src/flurrdbus/meson.build
+++ b/core/src/flurrdbus/meson.build
@@ -9,7 +9,7 @@ if get_option('introspection')
     dependencies: [glib, gobject, gio],
     vala_gir: gir,
     install: true,
-    install_dir: [true, true, true, true]
+    install_dir: [true, true, true, true],
   )
 
   custom_target(
@@ -18,7 +18,7 @@ if get_option('introspection')
     depends: flurrdbus_lib,
     output: typelib,
     install: true,
-    install_dir: get_option('libdir') / 'girepository-1.0'
+    install_dir: get_option('libdir') / 'girepository-1.0',
   )
 else
   flurrdbus_lib = shared_library(
@@ -26,11 +26,11 @@ else
     'flurrdbus.vala',
     dependencies: [glib, gobject, gio],
     install: true,
-    install_dir: [true, true, true]
+    install_dir: [true, true, true],
   )
 endif
 
 flurrdbus_dep = declare_dependency(
   include_directories: include_directories('.'),
-  link_with: flurrdbus_lib
+  link_with: flurrdbus_lib,
 )
