--- a/crates/flurrctl/Cargo.toml
+++ b/crates/flurrctl/Cargo.toml
@@ -16,3 +16,5 @@ dbus = "0.9.9"
 log = "0.4.28"
 env_logger = { version = "0.11.8", features = ["auto-color"], default-features = false }
 thiserror = "2.0.17"
+bitflags = "2.9.4"
+heck = "0.5.0"
