--- a/core/examples/meson.build
+++ b/core/examples/meson.build
@@ -1,1 +1,8 @@
-executable('flurr-demo', 'flurr_demo.vala', dependencies: dependencies + flurr_dep)
+dependencies = [
+  dependency('glib-2.0'),
+  dependency('gobject-2.0'),
+  dependency('gtk4'),
+  flurr_dep,
+]
+
+executable('flurr-demo', 'flurr_demo.vala', dependencies: dependencies)
