Actually ignore non-Vala compiler warnings

--- a/core/meson.build
+++ b/core/meson.build
@@ -1,6 +1,7 @@
 project('flurr', ['vala', 'c'], version: '0.1.0', license: 'MPL-2.0')
 
-add_project_arguments('--target-glib=auto', '--Xcc=-w', '--abi-stability', language: 'vala')
+add_project_arguments('-w', language: 'c')
+add_project_arguments('--target-glib=auto', '--abi-stability', language: 'vala')
 
 flurr_dep = dependency(
   'flurr',
