Bring flurr core library out of subprojects

--- a/core/meson.build
+++ b/core/meson.build
@@ -3,11 +3,7 @@ project('flurr', ['vala', 'c'], version: '0.1.0', license: 'MPL-2.0')
 add_project_arguments('-w', language: 'c')
 add_project_arguments('--target-glib=auto', '--abi-stability', language: 'vala')
 
-flurr_dep = dependency(
-  'flurr',
-  fallback: ['flurr', 'flurr_dep'],
-  default_options: ['introspection=' + get_option('introspection').to_string()]
-)
+subdir('src')
 
 if get_option('examples')
   subdir('examples')
