--- a/core/subprojects/flurrdbus/meson.build
+++ b/core/subprojects/flurrdbus/meson.build
@@ -4,7 +4,8 @@ add_project_arguments('-w', language: 'c')
 add_project_arguments('--target-glib=auto', '--abi-stability', '--vapi-comments', language: 'vala')
 
 version_split = meson.project_version().split('.')
-api_version = version_split[0] + '.' + version_split[1]
+api_version = '.'.join(version_split[0], version_split[1])
+filebase = '-'.join(meson.project_name(), api_version)
 
 dependencies = [
   dependency('glib-2.0'),
@@ -12,27 +13,53 @@ dependencies = [
   dependency('gio-2.0'),
 ]
 
-filebase = meson.project_name() + '-' + api_version
-gir = 'FlurrDBus-' + api_version + '.gir'
-install_dir = [true, true, true]
+config = configure_file(
+  input: 'config.vala.in',
+  output: 'config.vala',
+  configuration: {'API_VERSION': api_version},
+)
+sources = files('flurrdbus.vala') + config
 
 introspection = get_option('introspection')
-if introspection
-  install_dir += true
-endif
+valadoc = find_program('valadoc', required: false)
+valac_gir = introspection and not valadoc.found()
+gir = 'FlurrDBus-' + api_version + '.gir'
 
 flurrdbus_lib = shared_library(
   meson.project_name(),
-  'flurrdbus.vala',
+  sources,
   version: meson.project_version(),
   dependencies: dependencies,
-  vala_gir: gir,
   vala_vapi: filebase + '.vapi',
   install: true,
-  install_dir: install_dir
+  install_dir: valac_gir ? [true, true, true, true] : [true, true, true],
+  kwargs: valac_gir ? {'vala_gir': gir} : {},
 )
 
 build_dir = meson.current_build_dir()
+
+if not valac_gir
+  pkgs = []
+  foreach dep : dependencies
+    pkgs += ['--pkg', dep.name()]
+  endforeach
+
+  # valadoc can generate a GIR file with documentation
+  valadoc_gir = custom_target(
+    command: [
+      valadoc,
+      '-o', build_dir / 'docs',
+      '--force',
+      '--package-name', meson.project_name(),
+      '--gir=@OUTPUT@',
+      '@INPUT@'
+    ] + pkgs,
+    input: sources,
+    output: gir,
+    install: true,
+    install_dir: get_option('datadir') / 'gir-1.0',
+  )
+endif
 
 if introspection
   g_ir_compiler = find_program('g-ir-compiler')
@@ -40,10 +67,9 @@ if introspection
   lib_path = get_option('prefix') / get_option('libdir') / import('fs').name(flurrdbus_lib.full_path())
 
   custom_target(
-    typelib,
     command: [g_ir_compiler, '--output', '@OUTPUT@', '--shared-library', lib_path, build_dir / gir],
-    depends: flurrdbus_lib,
     output: typelib,
+    depends: valac_gir ? flurrdbus_lib : valadoc_gir,
     install: true,
     install_dir: get_option('libdir') / 'girepository-1.0',
   )
@@ -54,7 +80,7 @@ flurrdbus_dep = declare_dependency(
   version: meson.project_version(),
   dependencies: dependencies,
   include_directories: include_directories('.'),
-  variables: ['girdir=' + build_dir]
+  variables: {'girdir': build_dir, 'vapidir': build_dir},
 )
 
 import('pkgconfig').generate(
@@ -62,5 +88,9 @@ import('pkgconfig').generate(
   filebase: filebase,
   subdirs: meson.project_name(),
   requires: dependencies,
-  variables: ['girdir=${prefix}' / get_option('datadir') / 'gir-1.0']
+  variables: [
+    'datadir=${prefix}' / get_option('datadir'),
+    'girdir=${datadir}' / 'gir-1.0',
+    'vapidir=${datadir}' / 'vala' / 'vapi'
+  ],
 )
